Ensure autorelease pool exists when calling WKNSProcessInfoProcessAssertionWithTypes on Mac https://bugs.webkit.org/show_bug.cgi?id=105674

Patch by Kiran Muppala <cmuppala@apple.com> on 2013-01-03
Reviewed by Sam Weinig.

The function WKNSProcessInfoProcessAssertionWithTypes returns a autoreleased object and since,
it is called during process initialization prior to the runloop being started in PluginProcess
and SharedWorkerProcess, an autorelease pool must be explictly created.

* PluginProcess/mac/PluginProcessMainMac.mm:
(WebKit::PluginProcessMain): Enclose process initialization code in an @autoreleasepool block.
* SharedWorkerProcess/mac/SharedWorkerProcessMainMac.mm:
(WebKit::SharedWorkerProcessMain): Ditto.

Canonical link: https://commits.webkit.org/124228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138752 268f45cc-cd09-0410-ab3c-d52691b4dbfc